# Machine-Learning-for-Signal-Processing

./: main.py  pyproject.toml
Assignment_1/: LDA_for_faces_HW1_Q4.py  Speech_Q5.py
